# master-thesis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: app.cpp  app.h  main.cpp
thesis-code/: thesis-code.sln
thesis-code/thesis-code/: thesis-code.vcxproj  thesis-code.vcxproj.filters
thesis-project/: CMakeLists.txt
thesis-project/shaders/: fill-gbuffer-ps.glsl  fill-gbuffer-vs.glsl  fullscreen-triangle-vs.glsl  gui-ps.glsl  gui-vs.glsl  measure-vs.glsl  visualize-vs.glsl
thesis-project/src/: app.cpp  app.h  draw-call-count.cpp  main.cpp
thesis-project/src/camera/: camera.cpp  camera.h
thesis-project/src/config-setter/: config-setter.cpp  config-setter.h
thesis-project/src/depth-buffer/: depth_buffer.cpp  depth_buffer.h
thesis-project/src/gbuffer/: gbuffer.cpp  gbuffer.h
thesis-project/src/gui-descriptor-set/: gui-descriptor-set.cpp  gui-descriptor-set.h
thesis-project/src/mesh/: mesh.cpp  mesh.h
thesis-project/src/obj-loader/: obj-loader.cpp  obj-loader.h
thesis-project/src/render-cache/: render-cache.cpp  render-cache.h
thesis-project/src/render-jobs-descriptor-set/: render-jobs-descriptor-set.cpp  render-jobs-descriptor-set.h
thesis-project/src/render-object-type/: render-object-type.h
thesis-project/src/renderer/: renderer.cpp  renderer.h
thesis-project/src/scene/: scene.cpp  scene.h
vulkan-helpers/: CMakeLists.txt
vulkan-helpers/include/vulkan-helpers/: buffer.h  command_buffer.h  command_pool.h  descriptor_pool.h  descriptor_set.h  descriptor_set_layout.h  descriptor_set_layout_builder.h  pipeline_builder.h  pipeline_layout_builder.h  pipeline_vertex_layout.h  presentation_surface.h  render_pass_builder.h  swapchain.h  vk_dispatch_tables.h  vulkan_include.inl
vulkan-helpers/src/: buffer.cpp  command_buffer.cpp  command_pool.cpp  descriptor_pool.cpp  descriptor_pool_builder.cpp  descriptor_pool_builder.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout_builder.cpp  device.cpp  device.h  device_builder.cpp  device_builder.h  device_resource.h  instance.cpp  instance.h  instance_builder.cpp  instance_builder.h  physical_device.cpp  physical_device.h  pipeline_builder.cpp  pipeline_layout_builder.cpp  pipeline_vertex_layout.cpp  presentation_surface.cpp  queue.cpp  queue.h  render_pass_builder.cpp  swapchain.cpp  uniform_buffer.cpp  uniform_buffer.h  vk_dispatch_tables.cpp
